# ruau

./: .gitignore  Cargo.toml  MIGRATING.md  PUBLISHING.md  README.md  RELEASING.md  typos.toml
.github/workflows/: coverage.yml  docs.yml  main.yml
crates/ruau/: Cargo.toml  SAFETY.md  audit-baseline.json
crates/ruau-luau-src/: Cargo.toml
crates/ruau-luau-src/src/: lib.rs
crates/ruau-sys/: Cargo.toml  README.md
crates/ruau-sys/shim/: analyze_shim.cpp
crates/ruau-sys/src/: lib.rs  macros.rs
crates/ruau-sys/src/luau/: analyze.rs  compat.rs  lauxlib.rs  lua.rs  luacode.rs  luarequire.rs  mod.rs
crates/ruau/benches/: benchmark.rs  serde.rs
crates/ruau/examples/: async_http_client.rs  async_http_reqwest.rs  async_http_server.rs  async_tcp_server.rs  checked_session.rs  coverage.rs  guided_tour.rs  heap_categories.rs  readme.rs  repl.rs  serde.rs  tokio_embed.rs  tokio_worker.rs  userdata.rs
crates/ruau/src/: analyzer.rs  buffer.rs  checked.rs  chunk.rs  compiler.rs  conversion.rs  debug.rs  error.rs  function.rs  host.rs  lib.rs  macros.rs  memory.rs  module_schema.rs  multi.rs  prelude.rs  resolver.rs  scope.rs  state.rs  stdlib.rs  string.rs  table.rs  thread.rs  traits.rs  types.rs  userdata.rs  value.rs  value_visit.rs  vector.rs  vm.rs  worker.rs
crates/ruau/src/analyzer/: checked_load.rs  handle.rs  interfaces.rs  mod.rs  native.rs  schema.rs  tests.rs
crates/ruau/src/debug/: mod.rs  stack.rs
crates/ruau/src/luau/: heap_dump.rs  json.rs  mod.rs  require.rs
crates/ruau/src/luau/require/: fs.rs  mod.rs
crates/ruau/src/resolver/: filesystem.rs  in_memory.rs  mod.rs  path_util.rs  require_spec.rs  snapshot.rs
crates/ruau/src/runtime/: globals.rs  heap_dump.rs  mod.rs  require.rs
crates/ruau/src/serde/: de.rs  mod.rs  ser.rs
crates/ruau/src/state/: extra.rs  mod.rs  raw.rs  util.rs
crates/ruau/src/types/: app_data.rs  mod.rs  registry_key.rs  sync.rs  value_ref.rs
crates/ruau/src/userdata/: cell.rs  lock.rs  mod.rs  object.rs  ref.rs  registry.rs  util.rs
crates/ruau/src/userdata_impl/: cell.rs  lock.rs  mod.rs  object.rs  ref.rs  registry.rs  util.rs
crates/ruau/src/util/: error.rs  mod.rs  path.rs  shim.rs  short_names.rs  types.rs  userdata.rs
crates/ruau/src/value_visit/: error.rs  inbound.rs  mod.rs  outbound.rs  path.rs  tests.rs
crates/ruau/src/worker/: mod.rs  runtime.rs
crates/ruau/tests/: analyzer.rs  async.rs  buffer.rs  byte_string.rs  chunk.rs  compile.rs  conversion.rs  debug.rs  error.rs  function.rs  luau.rs  memory.rs  multi.rs  require.rs  scope.rs  send.rs  serde.rs  string.rs  table.rs  tests.rs  thread.rs  types.rs  userdata.rs  value.rs  worker.rs
crates/ruau/tests/compile/: async_any_userdata_method.rs  async_any_userdata_method.stderr  async_nonstatic_userdata.rs  async_nonstatic_userdata.stderr  checked_module_private.rs  checked_module_private.stderr  function_borrow.rs  internal_state_private.rs  internal_state_private.stderr  lua_norefunwindsafe.rs  lua_norefunwindsafe.stderr  luau_norefunwindsafe.rs  luau_norefunwindsafe.stderr  non_send.rs  raw_internals_hidden.rs  raw_internals_hidden.stderr  ref_nounwindsafe.rs  ref_nounwindsafe.stderr  resolver_internals_private.rs  resolver_internals_private.stderr  runtime_require_private.rs  runtime_require_private.stderr  scope_callback_capture.rs  scope_callback_capture.stderr  scope_invariance.rs  scope_invariance.stderr  scope_mutable_aliasing.rs  scope_mutable_aliasing.stderr  scope_userdata_borrow.rs  scope_userdata_borrow.stderr  userdata_internals_hidden.rs  userdata_internals_hidden.stderr  util_helpers_hidden.rs  util_helpers_hidden.stderr
crates/ruau/tests/fixtures/analyzer/examples/definitions/: api.d.luau  game_api.d.luau  invalid_api.d.luau  invalid_types_api.d.luau
crates/ruau/tests/fixtures/analyzer/examples/scripts/: 01_ok_builder.luau  02_type_error_due_number.luau  03_missing_method.luau  04_warning_unused_local.luau  05_syntax_error.luau  06_ok_type_refinement.luau
crates/ruau/tests/fixtures/analyzer/examples/scripts/modules/: 13_require_limitation_fail.luau  14_require_string_fail.luau
crates/ruau/tests/fixtures/analyzer/examples/scripts/realtime/: 07_realtime_pipeline_ok.luau  08_timeout_sensitive_types_ok.luau  09_cancellation_stress_ok.luau
crates/ruau/tests/fixtures/analyzer/examples/scripts/strict/: 10_table_shape_error_fail.luau  11_generic_result_ok.luau
crates/ruau/tests/fixtures/analyzer/examples/scripts/strict/narrowing/: 12_refinement_fail.luau
crates/ruau/tests/fixtures/analyzer/modules/filesystem/: requirer.luau  support.luau
crates/ruau/tests/fixtures/analyzer/modules/mixed/: requirer.luau  support.luau
crates/ruau/tests/fixtures/declarations/: config.d.luau  fs.d.luau  generated_mcp.d.luau  mcp.d.luau  porter.d.luau  session.d.luau  sh.d.luau  verber.d.luau
crates/ruau/tests/luau/: require.rs
crates/ruau_derive/: Cargo.toml
crates/ruau_derive/src/: chunk.rs  from_lua.rs  from_luau.rs  lib.rs  token.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  unsafe_audit.rs  unsafe_fn_check.rs
examples/: async_http_client.rs  async_http_reqwest.rs  coverage.rs  guided_tour.rs  repl.rs  serde.rs  tokio_embed.rs  tokio_worker.rs  userdata.rs
mlua-sys/: Cargo.toml  README.md
mlua-sys/src/: lib.rs
mlua_derive/src/: lib.rs
plans/: api.md  luau.md  modern.md  next-2.md  next.md  reap.md  runtime-consolidation.md  serde.md  simplify.md  structure.md  tokio.md  trim-inventory.md  trim.md  unsafe.md  wasm.md
src/: lib.rs  state.rs
src/state/: extra.rs
