[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Aldo Cortesi <aldo@corte.si>"]
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
bitflags = "2"
bstr = { version = "1", default-features = false, features = ["std", "serde"] }
cc = "1.2"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.8", features = ["async_tokio"] }
either = "1"
ffi = { package = "ruau-sys", version = "=0.0.1", path = "crates/ruau-sys" }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
libc = "0.2"
maplit = "1"
num-traits = "0.2"
proc-macro-error2 = "2"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
regex = "1"
reqwest = { version = "0.13", features = ["json"] }
ruau-luau-src = { version = "=0.0.1", path = "crates/ruau-luau-src" }
ruau_derive = { version = "=0.0.1", path = "crates/ruau_derive" }
rustc-hash = "2"
rustyline = "18"
serde = "1"
serde-value = "0.7"
serde_json = "1"
static_assertions = "1"
syn = { version = "2", features = ["full"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", default-features = false }
trybuild = "1"

[workspace.lints.rust]
missing_docs = "warn"
# Surface every unsafe op inside `unsafe fn`. `ruau` and `ruau-sys` carry a crate-level
# `#![allow]` because their `unsafe fn` bodies use implicit unsafe permission for FFI calls.
unsafe_op_in_unsafe_fn = "warn"
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(raw_dylib)',
] }

[workspace.lints.clippy]
absolute_paths = "warn"
branches_sharing_code = "warn"
ignore_without_reason = "warn"
let_underscore_must_use = "warn"
many_single_char_names = "warn"
missing_docs_in_private_items = "allow"
multiple_inherent_impl = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
# Prefer explicit `pub(crate)` on crate-internal helpers as a max-visibility clamp, even
# when the parent module is private.
redundant_pub_crate = "allow"
self_named_module_files = "warn"
tests_outside_test_module = "warn"
use_self = "warn"
wildcard_dependencies = "warn"
cfg_not_test = "warn"
comparison_chain = "warn"
items_after_statements = "warn"
needless_pass_by_ref_mut = "warn"
cognitive_complexity = "warn"
excessive_nesting = "warn"
too_many_lines = "warn"
# Every `unsafe { ... }` site in `ruau` is documented with a `SAFETY:` comment.
# `missing_safety_doc` stays at warn pending a per-fn `# Safety` sweep.
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "warn"
