[package]
name = "ruau-luau-src"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workspace-owned Luau source build for ruau-sys."
publish = false

[dependencies]
cc = { workspace = true, features = ["parallel"] }

[lints]
workspace = true
