[package]
name = "ruau-sys"
version = "0.11.0-rc.1"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation = "https://docs.rs/ruau-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]
license.workspace = true
links = "luau"
build = "build/main.rs"
description = """
Low level (FFI) bindings to Luau.
"""

[package.metadata.docs.rs]
features = ["luau"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["luau"]
luau = ["luau0-src"]
luau-codegen = ["luau"]
luau-vector4 = ["luau"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
cfg-if = "1.0"
pkg-config = "0.3.17"
luau0-src = { version = "0.20.0", optional = true }

[lints]
workspace = true
