[package]
name = "ruau-sys"
version = "0.11.0-rc.1"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation = "https://docs.rs/ruau-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]
license.workspace = true
links = "luau"
build = "build/main.rs"
description = """
Low level (FFI) bindings to Luau.
"""

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["luau"]
luau = []
luau-codegen = []
luau-vector4 = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
cfg-if = "1.0"
pkg-config = "0.3.17"
luau0-src = "0.20.0"

[lints]
workspace = true
