[package]
name = "ruau-sys"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation = "https://docs.rs/ruau-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]
license.workspace = true
links = "luau"
build = "build/main.rs"
description = """
Low level (FFI) bindings to Luau.
"""

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[build-dependencies]
cc.workspace = true
ruau-luau-src.workspace = true

[lints]
workspace = true
