[package]
name = "ruau"
version = "0.12.0-rc.1" # remember to update ruau_derive
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation = "https://docs.rs/ruau"
readme = "../../README.md"
keywords = ["luau", "async", "scripting"]
categories = ["api-bindings", "asynchronous"]
license.workspace = true
description = """
High level bindings to Luau with async/await features.
"""

[package.metadata.docs.rs]
features = ["macros"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
macros = ["dep:ruau_derive"]

[dependencies]
ruau_derive = { version = "=0.11.0", optional = true, path = "../ruau_derive" }
bstr = { version = "1.0", features = ["std", "serde"], default-features = false }
either = "1.0"
num-traits = { version = "0.2.14" }
rustc-hash = "2.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.0", default-features = false, features = ["rt", "sync"] }
thiserror = "2.0"
serde = "1.0"
serde_json = "1.0"
erased-serde = "0.4"
serde-value = "0.7"
bitflags = "2.0"
libc = "0.2"

ffi = { package = "ruau-sys", version = "0.11.0-rc.1", path = "../ruau-sys" }

[dev-dependencies]
trybuild = "1.0"
tokio = { version = "1.0", features = ["macros", "rt", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
maplit = "1.0"
static_assertions = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.1"
reqwest = { version = "0.13", features = ["json"] }
tempfile = "3"
criterion = { version = "0.8", features = ["async_tokio"] }
rustyline = "18.0"
tokio = { version = "1.0", features = ["full"] }

[lints]
workspace = true

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "serde"
harness = false

[[example]]
name = "async_http_client"
path = "../../examples/async_http_client.rs"
required-features = ["macros"]

[[example]]
name = "async_http_reqwest"
path = "../../examples/async_http_reqwest.rs"
required-features = ["macros"]

[[example]]
name = "coverage"
path = "../../examples/coverage.rs"

[[example]]
name = "guided_tour"
path = "../../examples/guided_tour.rs"
required-features = ["macros"]

[[example]]
name = "heap_categories"
path = "../../examples/heap_categories.rs"

[[example]]
name = "repl"
path = "../../examples/repl.rs"

[[example]]
name = "serde"
path = "../../examples/serde.rs"

[[example]]
name = "tokio_embed"
path = "../../examples/tokio_embed.rs"

[[example]]
name = "userdata"
path = "../../examples/userdata.rs"
required-features = ["macros"]
