[package]
name = "ruau"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation = "https://docs.rs/ruau"
readme = "../../README.md"
keywords = ["luau", "async", "scripting"]
categories = ["api-bindings", "asynchronous"]
license.workspace = true
description = """
High level bindings to Luau with async/await features.
"""

[package.metadata.docs.rs]
features = ["macros"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
macros = ["dep:ruau_derive"]

[dependencies]
bitflags.workspace = true
bstr.workspace = true
either.workspace = true
ffi.workspace = true
futures-util.workspace = true
libc.workspace = true
num-traits.workspace = true
ruau_derive = { workspace = true, optional = true }
rustc-hash.workspace = true
serde.workspace = true
serde-value.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false, features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }

[dev-dependencies]
maplit.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
static_assertions.workspace = true
trybuild.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
rustyline.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "serde"
harness = false

[[example]]
name = "async_http_client"
path = "../../examples/async_http_client.rs"
required-features = ["macros"]

[[example]]
name = "async_http_reqwest"
path = "../../examples/async_http_reqwest.rs"
required-features = ["macros"]

[[example]]
name = "coverage"
path = "../../examples/coverage.rs"

[[example]]
name = "guided_tour"
path = "../../examples/guided_tour.rs"
required-features = ["macros"]

[[example]]
name = "heap_categories"
path = "../../examples/heap_categories.rs"

[[example]]
name = "repl"
path = "../../examples/repl.rs"

[[example]]
name = "serde"
path = "../../examples/serde.rs"

[[example]]
name = "tokio_embed"
path = "../../examples/tokio_embed.rs"

[[example]]
name = "tokio_worker"
path = "../../examples/tokio_worker.rs"

[[example]]
name = "userdata"
path = "../../examples/userdata.rs"
required-features = ["macros"]
