[package]
name = "ruau_derive"
version = "0.11.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural macros for the ruau crate."
keywords = ["luau", "ruau"]
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-error2 = "2.0.1"
syn = { version = "2.0", features = ["full"] }
regex = "1.4"

[lints]
workspace = true
