[package]
name = "ruau_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural macros for the ruau crate."
keywords = ["luau", "ruau"]
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-error2.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn.workspace = true

[lints]
workspace = true
